--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
-      echo "Hello (${{ github.event.comment.body }}). Nice to meet you."
+      echo "Hello Kenta. Nice to meet you."
