--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -11,6 +11,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
     - run: |
-      echo "Hello Kenta. Nice to meet you."
+      echo "Hello ${{ github.event.comment.body }}. Nice to meet you."
