--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -6,12 +6,11 @@ on:
 
 jobs:
   deploy:
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/hello')
     runs-on: ubuntu-latest
-
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/hello')
     steps:
       - name: Get PR branch
-        uses: xt0rted/pull-request-comment-branch@v2
+        uses: xt0rted/pull-request-comment-branch@v1
         id: comment-branch
 
       - name: Checkout PR branch
@@ -19,5 +18,14 @@ jobs:
         with:
           ref: ${{ steps.comment-branch.outputs.head_ref }}
 
-      - name: Echo Comment
-        run: echo 'Hello Kenta'
+      - name: Add comment to PR
+        uses: actions/github-script@v6
+        if: always()
+        with:
+          script: |
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Hello Kenta'
+            })
