--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -1,31 +1,30 @@
-name: "Github Action Test Triggered Comment"
+name: Code Butler
 
-on: 
+permissions:
+  contents: read
+  pull-requests: write
+
+on:
   issue_comment:
-    types: [created, edited]
+    types: [created]
 
 jobs:
-  deploy:
+  review:
+    if: startsWith(github.event.comment.body, '/review')
     runs-on: ubuntu-latest
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/hello')
     steps:
-      - name: Get PR branch
-        uses: xt0rted/pull-request-comment-branch@v1
-        id: comment-branch
-
-      - name: Checkout PR branch
-        uses: actions/checkout@v3
+      - uses: ca-dp/code-butler@v1
         with:
-          ref: ${{ steps.comment-branch.outputs.head_ref }}
-
-      - name: Add comment to PR
-        uses: actions/github-script@v6
-        if: always()
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          cmd: review
+  chat:
+    if: startsWith(github.event.comment.body, '/chat')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ca-dp/code-butler@v1
         with:
-          script: |
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Hello Kenta'
-            })
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          cmd: chat
+          comment_body: ${{ github.event.comment.body }}
