--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -13,6 +13,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Add comment to PR
-        uses: mshick/add-pr-comment@v2
+        uses: actions/github-script@v6
+        if: always()
         with:
-          message: Hello Kenta
+          script: |
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Hello Kenta'
+            })
